<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:theme="@style/AppTheme.Overlay"
>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
                tools:layout_editor_absoluteY="-99dp" tools:layout_editor_absoluteX="0dp">
        <LinearLayout
                android:id="@+id/linearLayoutC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/parent"
                app:layout_constraintStart_toStartOf="@+id/parent"
                app:layout_constraintEnd_toEndOf="@+id/parent"
        >
            <TextView
                    android:id="@+id/textViewSettings"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold" android:letterSpacing="0.01"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:paddingTop="70dp" tools:ignore="Suspicious0dp"/>

            <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/textViewSettings"
                    app:layout_constraintStart_toStartOf="@+id/textViewSettings"
                    app:layout_constraintEnd_toEndOf="@+id/textViewSettings"
                    android:layout_marginTop="18dp">

                <TextView
                        android:id="@+id/textViewSettings2"
                        android:gravity="center|right"
                        android:textSize="16sp"
                        android:text="@string/application_theme"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:ignore="RtlHardcoded,RtlSymmetry"
                        android:paddingRight="15dp"/>

                <LinearLayout
                        android:gravity="left"
                        android:layout_width="0dp"
                        android:paddingStart="12dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" tools:ignore="RtlHardcoded,RtlSymmetry">

                    <Button
                            android:id="@+id/button3"
                            android:text="@string/dark"
                            android:layout_width="160dp"
                            android:layout_height="40dp"
                            app:icon="@drawable/baseline_light_mode_24"
                            app:iconGravity="textStart"
                            app:iconPadding="4dp"

                    />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout1"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
                    android:layout_marginTop="15dp">

                <TextView
                        android:id="@+id/textViewSettings3"
                        android:gravity="center|right"
                        android:textSize="16sp"
                        android:text="@string/save_all_notes_locally"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:ignore="RtlHardcoded,RtlSymmetry"
                        android:paddingRight="15dp"/>

                <LinearLayout
                        android:gravity="left"
                        android:layout_width="0dp"
                        android:paddingStart="12dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" tools:ignore="RtlHardcoded,RtlSymmetry">

                    <Button
                            android:id="@+id/button4"
                            android:text="@string/save"
                            android:layout_width="160dp"
                            android:layout_height="40dp"
                            app:icon="@drawable/baseline_file_download_24"
                            app:iconGravity="textStart"
                            app:iconPadding="4dp"
                    />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
                    android:layout_marginTop="15dp">

                <TextView
                        android:id="@+id/textViewSettings4"
                        android:gravity="center|right"
                        android:textSize="16sp"
                        android:text="@string/upload_notes"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:ignore="RtlHardcoded,RtlSymmetry"
                        android:paddingRight="15dp"/>

                <LinearLayout
                        android:gravity="left"
                        android:layout_width="0dp"
                        android:paddingStart="12dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" tools:ignore="RtlHardcoded,RtlSymmetry">

                    <Button
                            android:id="@+id/button5"
                            android:text="@string/upload"
                            android:layout_width="160dp"
                            android:layout_height="40dp"
                            app:icon="@drawable/baseline_upload_file_24"
                            app:iconGravity="textStart"
                            app:iconPadding="4dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout3"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
                    android:layout_marginTop="15dp">

                <TextView
                        android:id="@+id/textViewSettings5"
                        android:gravity="center|right"
                        android:textSize="16sp"
                        android:text="@string/cloud_storage"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:ignore="RtlHardcoded,RtlSymmetry"
                        android:paddingRight="15dp"/>

                <LinearLayout
                        android:gravity="left"
                        android:layout_width="0dp"
                        android:paddingStart="12dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" tools:ignore="RtlHardcoded,RtlSymmetry">

                    <Button
                            android:id="@+id/button6"
                            android:text="@string/connected"
                            android:layout_width="160dp"
                            android:layout_height="40dp"
                            app:icon="@drawable/baseline_cloud_queue_24"
                            app:iconGravity="textStart"
                            app:iconPadding="4dp"
                    />

                </LinearLayout>

            </LinearLayout>

            <TextView
                    android:id="@+id/textViewInformation"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout4"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
                    android:paddingTop="35dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout4"/>


            <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/textViewInformation"
                    app:layout_constraintStart_toStartOf="@+id/textViewInformation"
                    app:layout_constraintEnd_toEndOf="@+id/textViewInformation"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="40dp"
                    android:paddingBottom="70dp"
                    android:paddingRight="40dp" tools:ignore="UseCompoundDrawables">

                <ImageView
                        android:id="@+id/my_icon"
                        android:gravity="left"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/baseline_sms_failed_24"
                        tools:ignore="RtlHardcoded,RtlSymmetry"
                        android:paddingRight="15dp"
                        android:baselineAlignBottom="false"/>

                <TextView
                        android:id="@+id/textViewSettings7"
                        android:gravity="left"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/settingsInformation"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:ignore="RtlHardcoded,RtlSymmetry"
                />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
